Correct for text overflow, fixes #24

--- a/ore/core/static/css/style.css
+++ b/ore/core/static/css/style.css
@@ -1,129 +1,129 @@
 body {
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
-  background-color: #eee;
-  height: auto;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    background-color: #eee;
+    height: auto;
 }
 
 .white-background {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .hero {
-  background-color: #262c35;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  padding-top: 150px;
-  padding-bottom: 150px;
+    background-color: #262c35;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 h1 {
-  font-size: 32px;
+    font-size: 32px;
 }
 
 .hero.sp-navbar-fixed {
-  padding-bottom: 206px;
+    padding-bottom: 206px;
 }
 
 .wrapper-960 {
-  max-width: 960px;
-  margin: 0 auto;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 .pad-top {
-  margin-top: 24px;
+    margin-top: 24px;
 }
 
 .navbar-space {
-  margin-top: 56px;
+    margin-top: 56px;
 }
 
 .logo {
-  position: relative;
-  opacity: 0.6;
-  top: -18px;
-  height: 180px;
-  width: 180px;
+    position: relative;
+    opacity: 0.6;
+    top: -18px;
+    height: 180px;
+    width: 180px;
 }
 
 .logo-text {
-  font-size: 48px;
-  color: #fcf3d6;
-  opacity: 0;
+    font-size: 48px;
+    color: #fcf3d6;
+    opacity: 0;
 }
 
 .smaller {
-  font-size: 28px;
+    font-size: 28px;
 }
 
 .logo-text strong {
-  color: #f9ab00;
+    color: #f9ab00;
 }
 
 .navbar.top-navbar {
-  background-color: #304054;
-  border-bottom: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    background-color: #304054;
+    border-bottom: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .navbar.top-navbar .col-md-12 {
-  white-space-collapse: discard;
-  height: 56px;
+    white-space-collapse: discard;
+    height: 56px;
 }
 
-.navbar.top-navbar .navbar-nav>li>a {
-  padding: 18px 15px;
-  color: #ddd;
-  float: left;
-  cursor: pointer;
+.navbar.top-navbar .navbar-nav > li > a {
+    padding: 18px 15px;
+    color: #ddd;
+    float: left;
+    cursor: pointer;
 }
 
 .navbar.top-navbar a:hover {
-  background-color: #344c67 !important;
+    background-color: #344c67 !important;
 }
 
 .navbar.top-navbar li.active a {
-  background-color: #2c3d4b !important;
+    background-color: #2c3d4b !important;
 }
 
 .navbar.top-navbar li.active a:hover {
-  background-color: #344c67 !important;
+    background-color: #344c67 !important;
 }
 
 .navbar.top-navbar a:visited {
-  color: #ddd;
+    color: #ddd;
 }
 
 .navbar.top-navbar .nav-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  outline: none;
+    background: none;
+    border: none;
+    padding: 0;
+    outline: none;
 }
 
 .navbar.top-navbar a.logout-a {
-  padding: 0 !important;
+    padding: 0 !important;
 }
 
 .navbar.top-navbar .logout-btn {
-  padding: 18px 15px;
+    padding: 18px 15px;
 }
 
 .mini-logo {
-  height: 40px;
-  width: 40px;
-  float: left;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  margin-right: 15px;
-  margin-left: 15px;
+    height: 40px;
+    width: 40px;
+    float: left;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
 .navbar.top-navbar .notify {
-  color: #fbc400 !important;
+    color: #fbc400 !important;
 }
 
 .top-alert {
@@ -132,11 +132,11 @@ h1 {
 
 a {
 
-  outline: none;
+    outline: none;
 }
 
 a:focus, a:active {
-  outline: none;
+    outline: none;
 }
 
 a:visited {
@@ -144,184 +144,203 @@ a:visited {
 }
 
 a.no-underline:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .project-header {
-  margin-top: 24px;
-  margin-bottom: 16px;
+    margin-top: 24px;
+    margin-bottom: 16px;
 }
 
 .user-box {
-  text-align: center;
+    text-align: center;
 }
 
 .user-box h1 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .user-projects-header {
-  margin-top: 21px;
+    margin-top: 21px;
 }
 
 .well {
-  border: 2px solid #ddd;
-  border-radius: 0;
-  box-shadow: none;
-  background: none;
+    border: 2px solid #ddd;
+    border-radius: 0;
+    box-shadow: none;
+    background: none;
 }
 
 .project-listing {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .project-toolbar {
-  margin-top: 28px;
+    margin-top: 28px;
 }
 
 .project-subheader {
-  margin-top: 10px;
-  margin-bottom: 24px;
+    margin-top: 10px;
+    margin-bottom: 24px;
 }
 
 .home-userbox {
-  margin-top: 3px;
+    margin-top: 3px;
 }
 
 .fa-sm {
-  font-size: 70%;
+    font-size: 70%;
 }
 
 .avatar {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
 
 .project-list-group-item {
-  padding: 0;
+    padding: 0;
 }
+
 .project-listing {
-  display: block;
-  padding: 10px 15px;
+    display: block;
+    padding: 10px 15px;
 }
+
 .project-listing-name {
-  font-weight: bold;
+    font-weight: bold;
 }
+
 .project-listing:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .project-listing-tagline {
-  display: block;
-  color: #555;
+    display: block;
+    color: #555;
+    text-overflow: ellipsis;
+    overflow:hidden;
 }
 
 .version-list-group-item {
-  padding: 0;
+    padding: 0;
 }
+
 .version-listing {
-  display: block;
-  padding: 10px 15px;
+    display: block;
+    padding: 10px 15px;
 }
+
 .version-listing-name {
-  font-weight: bold;
+    font-weight: bold;
 }
+
 .version-listing:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .version-listing-tagline {
-  display: block;
-  color: #555;
+    display: block;
+    color: #555;
 }
 
 .file-list-group-item {
-  padding: 0;
+    padding: 0;
 }
+
 .file-listing {
-  display: block;
-  padding: 10px 15px;
+    display: block;
+    padding: 10px 15px;
 }
+
 .file-listing-name {
-  font-weight: bold;
+    font-weight: bold;
 }
+
 .file-listing:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .file-listing-tagline, .file-listing-size {
-  display: block;
-  color: #555;
+    display: block;
+    color: #555;
 }
+
 .file-listing-size {
-  float: right;
+    float: right;
 }
 
 #file-uploader {
-  opacity: 0.0000001;
+    opacity: 0.0000001;
 }
 
 .project-content {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 
 .attach-bottom {
-  border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
 }
 
 .light-background {
-  background: #eee;
-  padding-top: 20px;
+    background: #eee;
+    padding-top: 20px;
 }
 
 .project-navbar {
-  border: none;
-  border-radius: 0;
-  background: none;
-  margin: 0;
-  border-bottom: 2px solid #ddd;
+    border: none;
+    border-radius: 0;
+    background: none;
+    margin: 0;
+    border-bottom: 2px solid #ddd;
+}
+
+.project-description {
+    word-wrap: break-word;
 }
 
 .project-navbar li {
-  position: relative;
-  bottom: -2px;
+    position: relative;
+    bottom: -2px;
 }
 
 .project-navbar li > a {
-  border-bottom: 2px solid transparent;
+    border-bottom: 2px solid transparent;
 }
 
 .project-navbar li > a:hover {
-  border-bottom: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
 }
 
 .project-description-form {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 
 .spacey-heading {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .dot {
-  width: 12px;
-  height: 12px;
-  border-radius: 6px;
-  display: inline-block;
-  position: relative;
-  top: 1px;
+    width: 12px;
+    height: 12px;
+    border-radius: 6px;
+    display: inline-block;
+    position: relative;
+    top: 1px;
 }
 
 .btn-panel {
-  margin-top: 20px;
-  margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .top-panel {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .list-group-item.down {
-  background-color: #e5e5e5;
+    background-color: #e5e5e5;
 }
 
 .requiredField .asteriskField {
-  display: none;
+    display: none;
 }
